About page added, tj project filled out better

--- a/MyPortfolio/hugo.toml
+++ b/MyPortfolio/hugo.toml
@@ -18,7 +18,7 @@ pygmentsStyle = "perldoc"
   tagline = "maclunky"
   author = "Riley"
   authorImgPath = "/img/author.png"
-  authorBlurb = "It me"
+  authorBlurb = "My favorite sprite from my grandma's house."
 
 # If you do not want a social icon, just comment it out
 # Please update the example values!
