reformat post summaries as 2-column; hover element

--- a/hugo.toml
+++ b/hugo.toml
@@ -18,7 +18,7 @@ pygmentsStyle = "perldoc"
   tagline = ""
   author = "Riley"
   authorImgPath = "/img/author.png"
-  authorBlurb = "My favorite sprite from my grandma's house."
+  authorBlurb = "Thank you for visiting The Riley Zone. Please enjoy some of my work."
 
 # If you do not want a social icon, just comment it out
 # Please update the example values!
